Adding internal API key security
